--- a/client.html
+++ b/client.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>webwing</title>
+      <title>blissoo Express</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -63,13 +63,8 @@
                      <div class="col-md-6 col-sm-6 ">
                         <ul class="social_icon1">
                            <li> F0llow Us
-                           </li>
-                           <li> <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>
-                              </a>
-                           </li>
-                           <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
-                           <li> <a href="#"> <i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                           <li> <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>
+                           <li > <a href="https://www.youtube.com/@sooyaaa__"target="_blank"><i class="fa fa-youtube"></i></a></li>
+                        <li class="instagram hvr-pulse"><a href="https://www.instagram.com/blissoo_official?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==/"target="_blank"><i class="fa fa-instagram"></i>
                               </a>
                            </li>
                         </ul>
@@ -82,7 +77,7 @@
                   <div class="row d_flex">
                      <div class="col-md-4 col-sm-4 d_none">
                         <ul class="conta_icon">
-                           <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Call Us : +01 1234567890</a> </li>
+                          <li><a href="https://web.whatsapp.com/"target="_blank" ><i class="fa fa-phone" aria-hidden="true"></i> Contactanos:+1 (555) 555-1234</a> </li>
                         </ul>
                      </div>
                      <div class="col-md-4 col-sm-4 " >
@@ -90,7 +85,7 @@
                      </div>
                      <div class="col-md-4 col-sm-4 d_none">
                         <ul class="conta_icon ">
-                           <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> demo@gmail.com</a> </li>
+                          <li><a href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWsmCKLBJkWgBqngtMSdxhTQgndzBpdGVWQDTkQXwSkZNsnTFfhrmJSmjLZrRJRcgWVcXhncb" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i> contacto@blissooexpress.com</a> </li>
                         </ul>
                      </div>
                   </div>
@@ -107,22 +102,22 @@
                            <div class="collapse navbar-collapse" id="navbarsExample04">
                               <ul class="navbar-nav mr-auto">
                                  <li class="nav-item ">
-                                    <a class="nav-link" href="index.html"> Home  </a>
-                                 </li>
-                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html">about</a>
-                                 </li>
-                                 <li class="nav-item">
-                                    <a class="nav-link" href="service.html">services</a>
-                                 </li>
-                                 <li class="nav-item">
-                                    <a class="nav-link" href="team.html">team </a>
-                                 </li>
-                                 <li class="nav-item active">
-                                    <a class="nav-link" href="client.html">Clients</a>
-                                 </li>
-                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html"> contact us </a>
+                                      <a class="nav-link" href="index.html"> inicio </a>
+                              </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="about.html">NOSOTRAS </a>
+                              </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="service.html">SERVICIOS</a>
+                              </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="team.html">EQUIPO </a>
+                              </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="client.html">Cliente</a>
+                              </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="contact.html"> login </a>
                                  </li>
                               </ul>
                            </div>
@@ -167,8 +162,8 @@
                         <div class="row">
                            <div class="col-md-6 offset-md-3">
                               <div class="test_box">
-                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-                                 <i><img src="images/cos.jpg" alt="#"/></i>         <span>Consectetur</span>
+                                 <p>Encontré mi trabajo ideal en menos de una semana gracias a esta plataforma. El proceso fue rápido y sencillo. ¡Muy recomendada!" </p>
+                                 <i><img src="images/cos.jpg" alt="#"/ width="80" height="80"></i>         <span>lana del rey</span>
                               </div>
                            </div>
                         </div>
@@ -181,8 +176,8 @@
                         <div class="row">
                            <div class="col-md-6 offset-md-3">
                               <div class="test_box">
-                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-                                 <i><img src="images/cos.jpg" alt="#"/></i>         <span>Consectetur</span>
+                                 <p>Las recomendaciones de empleo son muy precisas y relevantes. Me ayudó a encontrar una posición acorde a mis habilidades y experiencia. ¡Excelente servicio! </p>
+                              <i><img src="images/cos.2.jpg" alt="#" / width="80" height="80"></i> <span>winter</span>
                               </div>
                            </div>
                         </div>
@@ -195,8 +190,8 @@
                         <div class="row">
                            <div class="col-md-6 offset-md-3">
                               <div class="test_box">
-                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis </p>
-                                 <i><img src="images/cos.jpg" alt="#"/></i>         <span>Consectetur</span>
+                                  <p>La interfaz del sitio es muy amigable y fácil de usar. Además, el soporte al cliente es excepcional. Resolvieron todas mis dudas rápidamente.</p>
+                              <i><img src="images/cos.3.jpg" alt="#" / width="80" height="80"></i> <span>ningning</span>
                               </div>
                            </div>
                         </div>
@@ -215,82 +210,76 @@
       <!-- end testimonial -->
     
       <!--  footer -->
-      <footer >
-         <div class="footer">
+      <footer>
+      <div class="footer">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12">
+                  <a class="logo2" href="#"><img src="images/loogo2.png" alt="#" / width="400" height="400" ></a>
+               </div>
+               <div class="col-lg-5 col-md-6 col-sm-6">
+                  <h3>contacto</h3>
+                  <ul class="location_icon">
+                     <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> corea 145
+                        <br> corea del sur
+                     </li>
+                     <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>contacto@blissooexpress.com <br> info@blissooexpress.com </li>
+                     <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>+82 10-1234-5678 <br>+1 (555) 123-4567</li>
+                  </ul>
+                  <ul class="social_icon">
+                     <li> <a href="https://www.youtube.com/@sooyaaa__" target="_blank"><i class="fa fa-youtube" ></i></a></li>
+                     <li> <a href="https://www.instagram.com/blissoo_official/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                  </ul>
+               </div>
+               <div class="col-lg-2 col-md-6 col-sm-6">
+                  <h3>mas info</h3>
+                  <ul class="link_icon">
+                     <li class="active"> <a href="index.html"> inicio</a></li>
+                     <li>
+                        <a href="about.html">
+                           </i>NOSOTRAS
+                     </li>
+                     <li> <a href="service.html"> </i>SERVICIOS </a></li>
+                     <li> <a href="team.html"></i>equipo</a></li>
+                     <li> <a href="client.html"></i>cliente </a></li>
+                     <li> <a href="contact.html"></i>contacto</a></li>
+                  </ul>
+               </div>
+               <div class="col-lg-2 col-md-6 col-sm-6">
+                  <h3>lo ultimo</h3>
+                  <ul class="link_icon">
+                     <li> <a href="file:///C:/Users/who0s/Escritorio/html/team.html" target="_blank"> Participate in staff </a></li>
+                     <li> <a href="https://www.instagram.com/sooyaaa__" target="_blank"> la fundadora </a></li>
+                     <li> <a href="https://www.instagram.com/blissoo_official" target="_blank"> la pagina de blissoo</a></li>
+                     <li> <a href="https://www.instagram.com/p/C8rQfHpJOkN/?utm_source=ig_web_button_share_sheet&igsh=MzRlODBiNWFlZA==" target="_blank"> la ultima foto de la fundadora  </a></li>
+                  </ul>
+               </div>
+               <div class="col-lg-3 col-md-6 col-sm-6">
+                  <h3>mandar tu correo</h3>
+                  <form id="request" class="main_form">
+                     <div class="row">
+                        <div class="col-md-12 ">
+                           <input class="news" placeholder="Your Email" type="type" name="Your Email">
+                        </div>
+                        <div class="col-md-12">
+                           <button class="send_btn">Send</button>
+                        </div>
+                     </div>
+                  </form>
+               </div>
+            </div>
+         </div>
+         <div class="copyright">
             <div class="container">
                <div class="row">
                   <div class="col-md-12">
-                     <a class="logo2" href="#"><img src="images/loogo2.png" alt="#"/></a>
-                  </div>
-                  <div class="col-lg-5 col-md-6 col-sm-6">
-                     <h3>Contact Us</h3>
-                     <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> London 145
-                           <br> United Kingdom 
-                        </li>
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com<br> demo@gmail.com</li>
-                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>+01 1234567890<br>+01 1234567889</li>
-                     </ul>
-                     <ul class="social_icon">
-                        <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                        <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li> <a href="#">   <i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
-                     </ul>
-                  </div>
-                  <div class="col-lg-2 col-md-6 col-sm-6">
-                     <h3>Menus</h3>
-                     <ul class="link_icon">
-                        <li > <a href="index.html"> Home</a></li>
-                        <li>
-                           <a href="about.html">
-                              </i>About Us  
-                        </li>
-                        <li> <a href="service.html"> </i>Services</a></li>
-                         <li> <a href="team.html"></i>Team</a></li>
-                        <li class="active"> <a href="client.html"></i>Clients</a></li>
-                        <li> <a href="contact.html"></i>Contact us</a></li>
-                     </ul>
-                  </div>
-                  <div class="col-lg-2 col-md-6 col-sm-6">
-                     <h3>Recent Post</h3>
-                     <ul class="link_icon">
-                        <li > <a href="#"> Participate in staff </a></li>
-                        <li>
-                           <a href="#">
-                              meetings manage 
-                        </li>
-                        <li> <a href="#"> dedicated to </a></li>
-                        <li> <a href="#"> marketing</a></li>
-                        <li> <a href="#"> November 25, 2019</a></li>
-                     </ul>
-                  </div>
-                  <div class="col-lg-3 col-md-6 col-sm-6">
-                     <h3>Newsletter</h3>
-                     <form id="request" class="main_form">
-                        <div class="row">
-                           <div class="col-md-12 ">
-                              <input class="news" placeholder="Your Email" type="type" name="Your Email"> 
-                           </div>
-                           <div class="col-md-12">
-                              <button class="send_btn">Send</button>
-                           </div>
-                        </div>
-                     </form>
-                  </div>
-               </div>
-            </div>
-            <div class="copyright">
-               <div class="container">
-                  <div class="row">
-                     <div class="col-md-12">
-                        <p>© 2019 All Rights Reserved.<a href="https://html.design/"> Free  html Templates</a></p>
-                     </div>
+                     <p>© 2024 blissooofficial: creado por samuel bogado.<a href="https://html.design/"> </a></p>
                   </div>
                </div>
             </div>
          </div>
-      </footer>
+      </div>
+   </footer>
       <!-- end footer -->
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
